# SQTHON

./: .gitignore  LICENSE  README.md  pyproject.toml  things_to_be_added.txt
sqthon/: __init__.py  admin.py  connection.py  data_visualizer.py  db_context.py  exception.py  llm.py  main.py  permissions.py  reg.py  services.py  util.py  utilities.py
tests/: package_test.py  random_test.py  test_connection.py  test_services.py  test_sqthon.py  test_visualizer.py
