[tool.poetry]
name = "sqthon"
version = "0.1.0"
description = ""
authors = ["HIMRAJ <himrajdas7@gmail.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



