[tool.poetry]
name = "sqthon"
version = "0.1.0"
description = ""
authors = ["HIMRAJ <iamhimraj002077@gmail.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
cryptography = "^43.0.0"
psycopg2 = "^2.9.9"
ollama = "^0.3.3"
requests = "^2.32.3"
pywin32 = "^306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



